Fixed word list overflow. Enabled dragging on desktop.

--- a/client/src/components/translation-selector/word-scroll-list.scss
+++ b/client/src/components/translation-selector/word-scroll-list.scss
@@ -4,6 +4,7 @@
   position: relative;
   cursor: pointer;
   overflow: hidden;
+  user-select: none;
 }
 
 ul {
